--- a/web/html/css/style.css
+++ b/web/html/css/style.css
@@ -28,6 +28,23 @@ button {
     padding: 8px 16px;
     border: 1px #ccc solid;
     border-radius: 4px;
+    display: flex;
+    align-items: center;
+    gap: 7px;
+}
+
+button span,
+button .loader {
+    display: none;
+}
+
+button.primary.loading {
+    opacity: 0.7;
+}
+
+button.primary.loading span,
+button.primary.loading .loader {
+    display: inline !important;
 }
 
 button.primary {
@@ -36,7 +53,7 @@ button.primary {
     color: #fff;
 }
 
-textarea{
+textarea {
     padding: 8px 16px;
     border: 1px #ccc solid;
     border-radius: 4px;
