--- a/web/html/css/common.css
+++ b/web/html/css/common.css
@@ -36,6 +36,7 @@ form button {
 .output{
     width: 100%;
     min-height: 100px;
+    max-height: 300px;
 }
 
 header {
@@ -65,5 +66,6 @@ header h1 {
     border: 3px solid;
     border-color: #ffffff #ffffff00;
     animation: l1 1s infinite;
-  }
-  @keyframes l1 {to{transform: rotate(.5turn)}}
+}
+
+@keyframes l1 {to{transform: rotate(.5turn)}}
