--- a/web/html/css/common.css
+++ b/web/html/css/common.css
@@ -71,7 +71,7 @@ header h1 {
 
 @keyframes l1 {to{transform: rotate(.5turn)}}
 
-table td{
+table td,th{
     padding: 4px;
     vertical-align: middle;
 }
