--- a/web/html/css/style.css
+++ b/web/html/css/style.css
@@ -105,3 +105,15 @@ pre:has(code){
     padding: 20px;
     background-color: #eee;
 }
+
+.test_case-container {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 20px;
+}
+
+.test_case-container textarea {
+    min-height: 60px;
+    width: 300px;resize: vertical;
+}
