--- a/web/html/css/common.css
+++ b/web/html/css/common.css
@@ -1,5 +1,7 @@
 body {
     font-size: 16px;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-container {
@@ -16,7 +18,8 @@ form {
     gap: 12px;
 }
 
-form textarea.code,#editor {
+form textarea.code,
+#editor {
     width: 100%;
     height: 300px;
 }
@@ -33,7 +36,7 @@ form button {
     width: fit-content;
 }
 
-.output{
+.output {
     width: 100%;
     min-height: 100px;
     max-height: 300px;
@@ -69,9 +72,18 @@ header h1 {
     animation: l1 1s infinite;
 }
 
-@keyframes l1 {to{transform: rotate(.5turn)}}
+@keyframes l1 {
+    to {
+        transform: rotate(.5turn)
+    }
+}
 
-table td,th{
+table td,
+th {
     padding: 4px;
     vertical-align: middle;
+}
+
+ul {
+    list-style: disc;
 }
