--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -7,16 +7,16 @@
     <title>mondai</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.36.0/ace.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <header>
-        <img src="img/logo.svg" alt="MaiCoder">
+        <img src="/img/logo.svg" alt="MaiCoder">
         <div>
-            <a href="code-test.html">コードテスト</a>
+            <a href="/code-test.html">コードテスト</a>
         </div>
     </header>
     <main>
@@ -43,7 +43,7 @@
             </form>
         </div>
     </main>
-    <script src="js/submit.js"></script>
+    <script src="/js/submit.js"></script>
     <script>
         const markdown = "# 問題文\n整数 A,B が与えられるので、 A+B の値を答えてください。\n但し、この問題は N 択問題であり、 i 番の選択肢は C \niです。\n正解となる 選択肢の番号 を出力してください。\n\n# 制約\n- 入力は全て整数\n- 1≤N≤300\n \n # 入力\n 入力は以下の形式で標準入力から与えられる。\n ```\n N A B\n C1 C2 ... CN\n ```\n \n # 出力\n答えを整数として出力せよ。\n\n# 入力例1\n```\n3 125 175\n200 300 400\n```\n# 出力例1\n```\n2\n```\n125+175=300 です。\n1 番の選択肢は 200  2 番の選択肢は 300 、3 番の選択肢は 400です。\nよって正解となる選択肢の番号は 2 番であり、これを出力します。" 
         function preview() {
