MarkDownの埋め込みをサーバーサイドで

--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -49,7 +49,7 @@
         function preview() {
             document.getElementById('content').innerHTML = marked.parse(markdown);
         }
-        preview() 
+        //preview() 
     </script>
 </body>
 
