スタイルを変更

--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -7,20 +7,23 @@
     <title>mondai</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.36.0/ace.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../../css/reset.css">
+    <link rel="stylesheet" href="../../css/common.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
     <header>
-        <img src="/img/logo.svg" alt="MaiCoder">
+        <img src="../../img/logo.svg" alt="MaiCoder">
         <div>
-            <a href="/code-test.html">コードテスト</a>
+            <a href="../../code-test.html">コードテスト</a>
         </div>
     </header>
-    <main>
+    <div class="title">
         <h1>タイトル</h1>
+        <p>実行時間: 3000s, メモリ制限: 1024MB</p>
+    </div>
+    <main>
         <div id="content"></div>
         <h1>提出</h1>
         <div class="form-container">
