--- a/web/html/css/common.css
+++ b/web/html/css/common.css
@@ -2,9 +2,11 @@
 
 
 body {
+    background-color: #eee;
     font-size: 17px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     font-family: "Lato", "Noto Sans JP", serif;
 }
 
@@ -64,6 +66,23 @@ header div {
 
 header h1 {
     font-size: 20px;
+}
+
+.title {
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.title h1 {
+    font-size: 32px;
+}
+
+.title p {
+    opacity: 0.8;
 }
 
 /* HTML: <div class="loader"></div> */
