--- a/web/html/css/style.css
+++ b/web/html/css/style.css
@@ -97,7 +97,7 @@ button.primary:active {
 }
 
 .editor-container #editor {
-    width:100%;
+    width: 100%;
 }
 
 #content {
@@ -105,7 +105,7 @@ button.primary:active {
     line-height: 1.5;
 }
 
-pre:has(code){
+pre:has(code) {
     padding: 20px;
     background-color: #eee;
 }
@@ -119,9 +119,22 @@ pre:has(code){
 
 .test_case-container textarea {
     min-height: 60px;
-    width: 300px;resize: vertical;
+    width: 300px;
+    resize: vertical;
 }
 
-#content h1{
+.test_case-container table {
+    counter-reset: rowCount;
+}
+
+table th {
+    counter-increment: rowCount;
+}
+
+table th:before {
+    content: counter(rowCount);
+}
+
+#content h1 {
     margin-top: 30px;
 }
