--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -49,7 +49,8 @@
     <script src="../../js/submit.js"></script>
     <script>
         async function get_problem(){
-            const data = await fetch("https://api.maicoder.f5.si/quiz/testa")
+            const data = await fetch("https://api.maicoder.f5.si/problems/testa")
+            console.log(data)
             preview(data)
         }
         function preview(data) {
