--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -49,7 +49,7 @@
     <script src="../../js/submit.js"></script>
     <script>
         async function get_problem() {
-            const response = await fetch("https://api.maicoder.f5.si/problems/testa")
+            const response = await fetch("https://api.maicoder.f5.si/problems/" + location.pathname.split('/')[2])
             const json = await response.json()
 
             preview(json.content.split('\\n').join('\n'))
