--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -43,35 +43,78 @@
                     コードテスト:
                     <div id="editor"></div>
                 </label>
-                <button type="button" class="primary submit" onclick="go()">
-                    <p>提出</p>
-                </button>
+                <div class="action">
+                    <button type="button" class="primary submit" onclick="go()">
+                        <p>提出</p>
+                    </button>
+                    <button type="button" onclick="in_judge()">
+                        <p>コードテスト</p>
+                    </button>
+                    <p class="test-result"></p>
+                </div>
             </form>
         </div>
     </main>
     <script src="../../js/submit.js"></script>
     <script src="../../js/common.js"></script>
     <script>
+        let test_case = {
+            in: [],
+            out: []
+        }
         async function get_problem() {
             const response = await fetch("https://api.maicoder.f5.si/problems/" + location.pathname.split('/')[2])
             const json = await response.json()
             preview(json.content.split('\\n').join('\n'))
         }
+        const data = "# 問題文\n整数 A,B が与えられるので、 A+B の値を答えてください。\n但し、この問題は N 択問題であり、 i 番の選択肢は C \niです。\n正解となる 選択肢の番号 を出力してください。\n\n# 制約\n- 入力は全て整数\n- 1≤N≤300\n \n # 入力\n 入力は以下の形式で標準入力から与えられる。\n ```\n N A B\n C1 C2 ... CN\n ```\n \n # 出力\n答えを整数として出力せよ。\n\n# 入力例1\n```\n3 125 175\n200 300 400\n```\n# 出力例1\n```\n2\n```\n125+175=300 です。\n1 番の選択肢は 200  2 番の選択肢は 300 、3 番の選択肢は 400です。\nよって正解となる選択肢の番号は 2 番であり、これを出力します。\n # 入力例2\n```\n3 125 175\n200 300 400\n```\n# 出力例2\n```\n2\n```\n"
         function preview(data) {
-            document.getElementById('content').innerHTML = marked.parse(data);
+            document.getElementById('content').innerHTML = marked.parse(data)
+
+            document.querySelectorAll("#content h1").forEach(element => {
+                if (element.innerText.includes("入力例")) {
+                    let code = element.nextElementSibling.children[0].innerText
+                    test_case.in.push(code)
+                }
+                if (element.innerText.includes("出力例")) {
+                    let code = element.nextElementSibling.children[0].innerText
+                    test_case.out.push(code)
+                }
+            })
+
             code_addcopy()
         }
 
-        function copy(element){
+        function in_judge() {
+            let message = []
+            test_case.in.forEach(async (data_in, index) => {
+                let data_out = test_case.out[index]
+                let data = {
+                    compiler: document.querySelector("select.compiler").value.split(",")[1],
+                    code: editor.getValue(),
+                    stdin: data_in
+                }
+                let case_name = "例" + (index + 1)
+                if ((await getData(data)).message.program_message == data_out) {
+                    message.push(case_name + ": OK")
+                } else {
+                    message.push(case_name + ": WA")
+                }
+                document.querySelector("p.test-result").innerText = message
+            })
+        }
+
+        function copy(element) {
             navigator.clipboard.writeText(element.nextElementSibling.children[0].innerText)
         }
 
-        function code_addcopy(){
-            document.querySelectorAll("pre code").forEach(element=>{
+        function code_addcopy() {
+            document.querySelectorAll("pre code").forEach(element => {
                 element.closest("pre").before(document.querySelector("template").content.cloneNode(true))
             })
         }
-        get_problem()
+        //get_problem()
+        preview(data)
     </script>
 </body>
 
