トップへのリンクを追加

--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -17,7 +17,9 @@
         <button class="copy" onclick="copy(this)">copy</button>
     </template>
     <header>
-        <img src="../../img/logo.svg" alt="MaiCoder">
+        <a href="./">
+            <img src="../../img/logo.svg" alt="MaiCoder">
+        </a>
         <div>
             <a href="../../code-test.html">コードテスト</a>
         </div>
