--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -52,7 +52,7 @@
                     <button type="button" onclick="in_judge()">
                         <p>コードテスト</p>
                     </button>
-                    <p class="test-result"></p>
+                    <div class="test-result"></div>
                 </div>
             </form>
         </div>
@@ -65,7 +65,7 @@
             out: []
         }
         async function get_problem() {
-            const response = await fetch("https://api.maicoder.f5.si/problems/" + location.pathname.split('/')[2])
+            const response = await fetch("https://api.maicoder.f5.si/problems/testa")
             const json = await response.json()
             preview(json.content.split('\\n').join('\n'))
         }
@@ -89,6 +89,7 @@
 
         function in_judge() {
             let message = []
+            document.querySelector(".test-result").innerHTML = ''
             test_case.in.forEach(async (data_in, index) => {
                 let data_out = test_case.out[index]
                 let data = {
@@ -97,12 +98,15 @@
                     stdin: data_in
                 }
                 let case_name = "例" + (index + 1)
-                if ((await getData(data)).message.program_message == data_out) {
-                    message.push(case_name + ": OK")
+                let test = await getData(data)
+                if (test.message.status == 1) {
+                    message.push(case_name + ":" + badge('ce'))
+                } else if (test.message.program_message == data_out) {
+                    message.push(case_name + ":" + badge('ac'))
                 } else {
-                    message.push(case_name + ": WA")
+                    message.push(case_name + ":" + badge('wa'))
                 }
-                document.querySelector("p.test-result").innerText = message
+                document.querySelector(".test-result").innerHTML = message
             })
         }
 
@@ -115,8 +119,7 @@
                 element.closest("pre").before(document.querySelector("template").content.cloneNode(true))
             })
         }
-        //get_problem()
-        preview(data)
+        get_problem()
     </script>
 </body>
 
