--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -61,8 +61,8 @@
     <script src="../../js/common.js"></script>
     <script>
         let test_case = {
-            in: [],
-            out: []
+            input: [],
+            output: []
         }
         async function get_problem() {
             const response = await fetch("https://api.maicoder.f5.si/problems" + location.pathname.split('/')[2])
@@ -76,11 +76,11 @@
             document.querySelectorAll("#content h1").forEach(element => {
                 if (element.innerText.includes("入力例")) {
                     let code = element.nextElementSibling.children[0].innerText
-                    test_case.in.push(code)
+                    test_case.input.push(code)
                 }
                 if (element.innerText.includes("出力例")) {
                     let code = element.nextElementSibling.children[0].innerText
-                    test_case.out.push(code)
+                    test_case.output.push(code)
                 }
             })
 
@@ -90,8 +90,8 @@
         function in_judge() {
             let message = []
             document.querySelector(".test-result").innerHTML = ''
-            test_case.in.forEach(async (data_in, index) => {
-                let data_out = test_case.out[index]
+            test_case.input.forEach(async (data_in, index) => {
+                let data_out = test_case.output[index]
                 let data = {
                     compiler: document.querySelector("select.compiler").value.split(",")[1],
                     code: editor.getValue(),
