--- a/web/html/css/style.css
+++ b/web/html/css/style.css
@@ -35,6 +35,7 @@ button {
     display: flex;
     align-items: center;
     gap: 7px;
+    background-color: #fff;
 }
 
 button span,
@@ -55,6 +56,10 @@ button.primary {
     background-color: #2476ea;
     border: 1px #005ee1 solid;
     color: #fff;
+}
+
+button.caution {
+    color: #d70000;
 }
 
 textarea,input[type="text"] {
@@ -92,7 +97,7 @@ button.primary:active {
     display: flex;
     max-width: 1000px;
     width: 100%;
-    gap: 20px;
+    gap: 2px;
     flex-direction: column;
 }
 
@@ -115,18 +120,32 @@ pre:has(code) {
     display: flex;
     flex-direction: column;
     align-items: baseline;
-    gap: 20px;
     width: 100%;
+}
+
+.test_case-container .wrapper {
+    background-color: #f4f4f4;
+    border: 1px solid #ddd;
+    padding: 15px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 20px;
+    border-radius: 4px;
 }
 
 .test_case-container textarea {
     min-height: 60px;
     width: 100%;
     resize: vertical;
+    text-align: left;
+    background-color: #fff;
 }
 
 .test_case-container table {
     counter-reset: rowCount;
+    text-align: center;
     width: 100%;
 }
 
@@ -204,4 +223,8 @@ img.badge {
 
 main section {
     width: 100%;
+}
+
+td.remove {
+    width: 0;
 }
