--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -25,7 +25,7 @@
         </div>
     </header>
     <div class="title">
-        <h1>タイトル</h1>
+        <h1></h1>
         <p>実行時間: 3000s, メモリ制限: 1024MB</p>
     </div>
     <main>
@@ -68,6 +68,11 @@
             const response = await fetch("https://api.maicoder.f5.si/problems" + location.pathname.split('/')[2])
             const json = await response.json()
             preview(json.content.split('\\n').join('\n'))
+            set_title(json.name)
+        }
+
+        function set_title(name) {
+            document.querySelector(".title h1").innerText = name
         }
 
         function preview(data) {
