コンテストに合わせて公開オプションを作成

--- a/web/html/css/common.css
+++ b/web/html/css/common.css
@@ -115,3 +115,9 @@ textarea.code {
     font-family: monospace;
 }
 
+
+
+input[type="checkbox"]{
+    transform: scale(1.4);
+    transform-origin: center left;
+}
