--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -26,7 +26,7 @@
     </header>
     <div class="title">
         <h1></h1>
-        <p>実行時間: 3000s, メモリ制限: 1024MB</p>
+        <p>実行時間: 3000ms, メモリ制限: 1024MB</p>
     </div>
     <main>
         <div id="content"></div>
