--- a/web/html/templates/contest/contest.html
+++ b/web/html/templates/contest/contest.html
@@ -139,6 +139,25 @@
     </main>
     <script src="../../js/submit.js"></script>
     <script>
+
+        async function get_contest() {
+            const response = await fetch("https://api.maicoder.f5.si/contests/" + location.pathname.split('/')[2])
+            const json = await response.json()
+            set_title(json.name, json.date)
+        }
+
+        function set_title(name, date) {
+            const formattedDate = new Date(date).toLocaleString('ja-JP', {
+                year: 'numeric',
+                month: '2-digit',
+                day: '2-digit',
+                hour: '2-digit',
+                minute: '2-digit'
+            }).replace(/\//g, '-').replace(',', '');
+            document.querySelector(".title h1").innerText = name
+            document.querySelector(".title p").innerText += ' ' + formattedDate
+        }
+
         class nav {
             constructor(element) {
                 document.querySelector("button.active").classList.remove("active")
@@ -161,7 +180,6 @@
         document.querySelector(".result").innerHTML = badge("ac")
 
         /////////////////
-
 
     </script>
 </body>
