--- a/web/html/templates/contest/contest.html
+++ b/web/html/templates/contest/contest.html
@@ -139,6 +139,15 @@
     </main>
     <script src="../../js/submit.js"></script>
     <script>
+        function format_date(date) {
+            return new Date(date).toLocaleString('ja-JP', {
+                year: 'numeric',
+                month: '2-digit',
+                day: '2-digit',
+                hour: '2-digit',
+                minute: '2-digit'
+            }).replace(/\//g, '-').replace(',', '');
+        }
 
         async function get_contest() {
             const response = await fetch("https://api.maicoder.f5.si/contests/" + location.pathname.split('/')[2])
@@ -147,13 +156,7 @@
         }
 
         function set_title(name, date) {
-            const formattedDate = new Date(date).toLocaleString('ja-JP', {
-                year: 'numeric',
-                month: '2-digit',
-                day: '2-digit',
-                hour: '2-digit',
-                minute: '2-digit'
-            }).replace(/\//g, '-').replace(',', '');
+            const formattedDate = format_date(date);
             document.querySelector(".title h1").innerText = name
             document.querySelector(".title p").innerText += ' ' + formattedDate
         }
