命名を変更

--- a/web/html/templates/contest/contest.html
+++ b/web/html/templates/contest/contest.html
@@ -60,7 +60,7 @@
         <table class="border">
             <tr>
                 <td></td>
-                <td>問題名</td>
+                <td class="name">問題名</td>
                 <td>得点</td>
             </tr>
         </table>
