コンテストテンプレとパスの修正

--- a/web/html/templates/contest/contest.html
+++ b/web/html/templates/contest/contest.html
@@ -36,7 +36,7 @@
         </tr>
     </template>
     <header>
-        <a href="./">
+        <a href="/">
             <img src="../../img/logo.svg" alt="MaiCoder">
         </a>
         <div>
