--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -17,7 +17,7 @@
         <button class="copy" onclick="copy(this)">copy</button>
     </template>
     <header>
-        <a href="./">
+        <a href="/">
             <img src="../../img/logo.svg" alt="MaiCoder">
         </a>
         <div>
