--- a/web/html/css/style.css
+++ b/web/html/css/style.css
@@ -70,11 +70,20 @@ button.caution {
 textarea,
 input[type="text"],
 input[type="number"],
-input[type="datetime-local"] {
+input[type="datetime-local"],
+input[type="password"] {
     padding: 8px 16px;
     border: 1px #ccc solid;
     border-radius: 4px;
     background-color: #fff;
+}
+
+textarea:focus,
+input[type="text"]:focus,
+input[type="number"]:focus,
+input[type="datetime-local"]:focus,
+input[type="password"]:focus {
+    outline: 2px solid #005ee140;
 }
 
 textarea.monospace {
@@ -280,6 +289,46 @@ table.border td {
     padding: 12px 16px;
 }
 
-table.border, table.border th, table.border td {
-    border:1px solid #ddd;
-  }
+table.border,
+table.border th,
+table.border td {
+    border: 1px solid #ddd;
+}
+
+.panel {
+    background-color: #fff;
+    border: #ddd 1px solid;
+    padding: 40px;
+    border-radius: 6px;
+    width: 94%;
+    max-width: 420px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 40px;
+}
+
+.panel h1 {
+    font-size: 28px;
+}
+
+.panel section {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.panel input {
+    width: 100%;
+}
+
+.panel p.caption {
+    font-size: 15px;
+    color: #555;
+}
+
+.panel form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
