--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -46,7 +46,7 @@
                     <div id="editor"></div>
                 </label>
                 <div class="action">
-                    <button type="button" class="primary submit" onclick="submit()">
+                    <button type="button" class="primary submit" onclick="problem_submit()">
                         <p>提出</p>
                     </button>
                     <button type="button" onclick="in_judge()">
@@ -127,7 +127,7 @@
         }
 
         async function get_submit(data) {
-            const url = `https://api.maicoder.f5.si/${location.pathname.split('/')[2]}`;
+            const url = `https://api.maicoder.f5.si/problems/00003/submit/`;
             try {
                 const response = await fetch(url, {
                     method: "POST",
@@ -143,12 +143,14 @@
             }
         }
 
-        async function submit() {
+        async function problem_submit() {
             let data = {
+                user:"pcsuke",
                 compiler: document.querySelector("select.compiler").value.split(",")[1],
                 code: editor.getValue(),
             }
-            await get_submit(data)
+            console.log(data)
+            await console.log(await get_submit(data))
             //もしsucusessが帰ってきたらリダイレクト コンテストの自分の提出に
         }
 
