--- a/web/html/css/common.css
+++ b/web/html/css/common.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans+JP:wght@100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Noto+Sans+JP:wght@100..900&display=swap');
 
 body {
-    background-color: #eee;
+    background-color: #f8f8f8;
     font-size: 17px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: "Lato", "Noto Sans JP", serif;
+    font-family: "Geist", "Noto Sans JP", serif;;
 }
 
 .form-container {
@@ -54,9 +53,12 @@ header {
     display: flex;
     align-items: center;
     padding: 20px 30px;
-    background-color: #222;
-    color: #fff;
+    background-color: #ffffffc0;
+    backdrop-filter: blur(10px);
+    color: #111;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
 }
 
 header div {
