--- a/web/html/css/style.css
+++ b/web/html/css/style.css
@@ -5,6 +5,9 @@ h1 {
 
 header {
     position: sticky;
+    z-index: 1000;
+    height: 60px;
+    border-bottom: 1px #ddd solid;
 }
 
 main {
@@ -20,6 +23,7 @@ main {
     gap: 30px;
     border-radius: 4px;
     border: 1px solid #ddd;
+    margin-bottom: 15px;
 }
 
 label {
@@ -33,7 +37,7 @@ select {
 }
 
 button {
-    padding: 8px 16px;
+    padding: 9px 24px;
     border: 1px #ccc solid;
     border-radius: 4px;
     display: flex;
@@ -58,8 +62,8 @@ button.primary.loading .loader {
 }
 
 button.primary {
-    background-color: #2476ea;
-    border: 1px #005ee1 solid;
+    background-color: #1e1e1e;
+    border: 1px #1a1a1a solid;
     color: #fff;
 }
 
@@ -95,7 +99,7 @@ button:active {
 }
 
 button.primary:active {
-    background-color: #0f5bc6;
+    background-color: #2a2a2a;
 }
 
 #editor {
@@ -280,8 +284,7 @@ nav button {
 }
 
 nav button.active {
-    background-color: #2476ea;
-    color: #fff;
+    background-color: #dddddd;
 }
 
 table.border td {
@@ -296,8 +299,6 @@ table.border td {
 }
 
 .panel {
-    background-color: #fff;
-    border: #ddd 1px solid;
     padding: 40px;
     border-radius: 6px;
     width: 94%;
@@ -306,6 +307,10 @@ table.border td {
     flex-direction: column;
     gap: 20px;
     margin-top: 40px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .panel h1 {
