APIに合わせる

--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -211,7 +211,7 @@
         }
 
         async function get_submit(data) {
-            const url = `https://api.maicoder.f5.si/submit/${location.pathname.split('/')[2]}`;
+            const url = `https://api.maicoder.f5.si/problems/submit/${location.pathname.split('/')[2]}`;
             try {
                 const response = await fetch(url, {
                     method: "POST",
