--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -38,10 +38,11 @@
         }
 
         #content {
-            overflow-y: scroll;
+            overflow-y: auto;
             padding: 20px;
             padding-top: 0;
             height: 100%;
+            color: #111;
         }
 
         #content h1 {
@@ -92,7 +93,6 @@
         }
 
         .output {
-            overflow-y: scroll;
             height: 100%;
             flex-grow: 1;
         }
@@ -140,9 +140,12 @@
             display: flex;
             align-items: center;
             background-color: #f9f9f9;
-            padding: 10px;
+            padding-left: 10px;
+            padding-right: 10px;
+            height: 42px;
             border-bottom: 1px solid #eee;
             justify-content: space-between;
+            flex-shrink: 0;
         }
 
         .top .material-symbols-outlined {
@@ -201,19 +204,19 @@
                         </span>
                         コード
                     </p>
+                    <select class="compiler" onchange="compiler_change()">
+                        <option value="python,pypy-3.7-v7.3.9">Python: pypy-3.7-v7.3.9</option>
+                        <option value="c++,gcc-head">C++: gcc-head</option>
+                    </select>
                 </div>
                 <form>
                     <div class="code">
-                        <select class="compiler" onchange="compiler_change()">
-                            <option value="python,pypy-3.7-v7.3.9">Python: pypy-3.7-v7.3.9</option>
-                            <option value="c++,gcc-head">C++: gcc-head</option>
-                        </select>
                         <div id="editor"></div>
                     </div>
                 </form>
             </div>
             <div id="in-out" class="wrap-panel">
-                <div class="top" style="padding-top:7px;padding-bottom: 7px;">
+                <div class="top">
                     <p>
                         <span class="material-symbols-outlined">
                             terminal
