--- a/web/html/templates/problem/problem.html
+++ b/web/html/templates/problem/problem.html
@@ -205,7 +205,7 @@
                         コード
                     </p>
                     <select class="compiler" onchange="compiler_change()">
-                        <option value="python,pypy-3.7-v7.3.9">Python: pypy-3.7-v7.3.9</option>
+                        <option value="python,pypy-3.7-v7.3.9">Python: pypy-3.7</option>
                         <option value="c++,gcc-head">C++: gcc-head</option>
                     </select>
                 </div>
