--- a/web/html/css/index.css
+++ b/web/html/css/index.css
@@ -5,5 +5,5 @@ section.top {
     justify-content: center;
     flex-direction: column;
     gap: 10px;
-    height: 200px;
+    padding: 50px 0;
 }
