--- a/web/html/css/style.css
+++ b/web/html/css/style.css
@@ -50,7 +50,7 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
-    padding: 20px 30px;
+    padding: 20px 20px;
     background-color: #ffffffc0;
     backdrop-filter: blur(10px);
     color: #111;
@@ -61,15 +61,20 @@ header {
 
 header div {
     display: flex;
-    gap: 25px;
+    gap: 32px;
+    align-items: center;
 }
 
 header h1 {
     font-size: 20px;
 }
 
+header img {
+    width: 150px;
+}
+
 .title {
-    height: 150px;
+    height: 156px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -466,4 +471,28 @@ table.border td {
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+header a.primary {
+    background: #222;
+    padding: 10px 20px;
+    border-radius: 8px;
+    color: white;
+}
+
+section.top .wrap{
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    line-height: 1.3;
+    align-items: center;
+}
+
+section .action {
+    margin-top: 12px;
+}
+
+section h2 {
+    font-size: 17px;
 }
